# JellyfinEpisodeSorter

./: CMakeLists.txt  clangCPP23_diet_build_profile  conanfile.txt
API/: AdventureTimeSearch.json  AdventureTimeSearchCURL  AdventureTimeSearchMultiple.json  GetEpisodesFromSeriesID.json  GetEpisodesFromSeriesIDCURL  LostsOfEpisodes.json  SearchNoItems.json  ffmpegCommand  googleAPIResponse.json
doc/: CreateContainer
src/: CMakeLists.txt  FandomProvider.cpp  apiClient.cpp  jesLog.cpp  main.cpp  ocr.cpp
src/include/: FandomProvider.hpp  IEpisodeProvider.hpp  apiClient.hpp  jesLog.hpp  models.hpp  ocr.hpp  parser.hpp
src/interfaces/: IEpisodeProvider.hpp
src/net/: jellyfin.cpp  jellyfin.hpp
src/providers/: FandomProvider.cpp  FandomProvider.hpp
tests/: CMakeLists.txt  test_response_parsing.cpp
